# platform

./: CMakeLists.txt
include/platform/: platform.h
src/: CMakeLists.txt
src/linux/: linux_internal.h  linux_platform.c  xlib_window.c  xlib_window.h
src/windows/: win32_platform.c
testing/: CMakeLists.txt  main.c
